--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.3.7",
 		"league/plates": "^3.3",
-		"twbs/bootstrap": "4.0.0-alpha.6"
+		"twbs/bootstrap": "4.0.0-alpha.6",
+		"components/jquery": "3.1.1"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
